--- a/ios/PassportGenerator/Info.plist
+++ b/ios/PassportGenerator/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>To record voice</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To capture photo</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To select photo</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Fontisto.ttf</string>
