--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.3.2",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
