--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.3.2",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.3.2",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-gesture-handler": "^2.7.1",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
