--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-bootsplash": "^4.3.2",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-safe-area-context": "^4.4.1",
